--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev" : "nodemon src/index.js --exec babel-node"
+    "dev": "nodemon src/index.js --exec babel-node"
   },
   "keywords": [],
   "author": "",
@@ -15,7 +15,9 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "morgan": "^1.10.0",
-    "mssql": "^9.1.1"
+    "mssql": "^9.1.1",
+    "mysql": "^2.18.1",
+    "tedious": "^15.1.3"
   },
   "devDependencies": {
     "@babel/cli": "^7.21.0",
